hw05/files/create_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: nginx
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: multitool
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
